  to initializing R at the :mod:`rpy2.rinterface` level (issue #833).

- The package is now fully typed with type hints.

- The :func:`rpy2.rinterface.evalr` accepts the named parameters `envir`
  and `enclos`, mirroring better the signature of the R function `eval`.

- New function :func:`rpy2.rinterface.evalr_expr` to evaluate R expressions.

Changes
-------

- Better customizablity of conversion rules from R objects with `typeof`
  `INTSXP` (array of integers), `VECSEXP` (R list), and `LGLSXP` (array of
  booleans) :mod:`pandas`.

- The representation of R integer is no longer using a comma separator
  for thousands (issue #797).

- Requirement is now Python>=3.7. :mod:`rpy2` is no longer tested with Python 3.6.

- :mod:`rpy2.robject.lib.grid` was refactored to fix the conversion. This
  fixes issue #804. A classes now have a `classmethod` `r` for the R
  constructor (the `__init__` is the Python constructor).

- :obj:`rpy2.robjects.vectors.__all__` is removed.

- Cleaner class design by having :class:`rpy2.rinterface.NumpyArrayMixin`
  removed and replaced by
  :class:`rpy2.rinterface.SexpVectorWithNumpyInterface`.

- With Python < 3.8 the module :mod:`typing_extensions` is now a requirement.

- Initialization and update steps for
  :class:`rpy2.robjects.conversion.NameClassMap` were updated to ensure
  type hints are correct. This probably solved cryptic bugs with conversion
  system.

- :meth:`rpy2.rinterface.LangSexpVector.from_string` was at the robject level (class method of
  :class:`rpy2.robjects.language.LangVector`) but is now at the interface level.

Bugs fixed
----------

- R warning about partial argument name matching is now cleared (issue #821).

- Setting a slice for a StrSexpVector where some of the elements are not strings
  no longer fails.

- Assigning items to an R array of strings using a slice of more than one
  element was likely to fail.

- The :mod:`rpy2.rinterface`-level conversion of Python integers to R integers is now